# gmobi-vectorizer

./: .gitignore  .npmignore  .travis.yml  README.md  binding.gyp  check-sync.R  index.js  package.json  test-sync.R  test.sh  transformer.js  vectorizer.js
cvv8/detail/: convert_core.hpp
pkg/: .Rbuildignore  DESCRIPTION  NAMESPACE  configure  configure.ac
pkg/R/: RcppExports.R  hash.R  vectorize.R  zzz.R
pkg/inst/: .gitignore  index.js  package.json  package.json.in
pkg/src/: RcppExports.cpp  digest.c  digestlocal.h  hash_function.cpp
pkg/tests/: test-hash.R
src/: pmurhash.c  vectorizer.cpp
test/: compatibility.js  test-compatibility.js  test-compatibility.online.js  test-hash.js  test-transformer.js  test-vectorize.js
test/error-schema/: example.json
test/ndjson/: example.ndjson  example2.ndjson  example3.ndjson  example4.ndjson
test/schema/: bid.json  bid.online.json  example.json  example2.json  example3.json  example4.json
